### Added - Create base 64 file function
### Fixed
- User routes
